<resources>
    <string name="app_name">Neonatal</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="copyright_2017">Copyright-2017</string>
    <string name="Neanato_App">Neonatal Nurseries</string>
    <string name="emailSample">Yourname@Gmail.com</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone: NNN-NNN-NNNN</string>
    <string name="minimum_6_digit">minimum 6 digit</string>
    <string name="back_to_login">Back To Login</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mile_stone">Mile Stone</string>
    <string name="physical_development">Physical Development</string>
    <string name="manu">Navigate</string>

    <string-array name="Sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="PreMatrureweeks">
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>4 Weeks</item>
        <item>5 Weeks</item>
        <item>6 Weeks</item>
        <item>7 Weeks</item>
        <item>8 Weeks</item>
        <item>9 Weeks</item>
        <item>10 Weeks</item>
        <item>11 Weeks</item>
        <item>12 Weeks</item>
        <item>13 Weeks</item>
        <item>14 Weeks</item>
        <item>15 Weeks</item>
        <item>16 Weeks</item>
        <item>17 Weeks</item>
        <item>18 Weeks</item>
        <item>19 Weeks</item>
        <item>20 Weeks</item>
        <item>21 Weeks</item>
        <item>22 Weeks</item>
        <item>23 Weeks</item>
        <item>24 Weeks</item>
    </string-array>

    <string name="title_activity_main">DrawBaseActivity</string>
    <string name="title_activity_drawer_base">DrawerBaseActivity</string>
    <string name="menu">menu</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_bar">barActivity</string>
    <string name="projects">list</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="update_selected">Update Selected</string>
    <string name="title_activity_journal">New Journal</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="newPatient">New Baby</string>
    <string name="nicuVideo">NICU Virtual Tour</string>
    <string name="mainMenuTitle">Neonatal App</string>
    <string name="viewHistory">Baby History</string>
    <string name="viewAppointments">Appointments</string>
    <string name="viewJournal">Journal</string>
    <string name="patientMenuTitle">Baby Name</string>
    <string name="equip_name">NICU Equipment</string>
    <string name="image_description">Image description</string>
    <string name="equip_cm_summary">Wires attached to your baby\'s chest are hooked up to a screen that
        monitors your baby\'s heart rate, breathing rate, and oxygen in their blood.</string>
    <string name="equip_cvc_summary">A type of IV that is in your baby\'s chest to give your baby fluids,
        nutrients, or medications.</string>
    <string name="equip_cpap_summary">A device that is put over your baby\'s nose to help them breathe.
        It is also called "CPAP".</string>
    <string name="equip_i_summary">A type of bed that is closed on all sides to keep your baby warm and safe.</string>
    <string name="equip_nt_summary">A small tube that is put in your baby\'s nose or mouth and goes down into their
        stomach. it helps to feed your baby breast milk or formula.</string>
    <string name="equip_pic_summary">A type of IV that is in your baby\'s hand, foot, leg, or scalp to give your baby
        fluids, nutrients, or medications.</string>
    <string name="equip_p_summary">A type of light that is used to help break down bilirubin in your baby\'s blood</string>
    <string name="equip_po_summary">A wire that is attached to your baby\'s foot or wrist to monitor the amount of oxygen
        in their blood.</string>
    <string name="equip_uc_summary">A type of IV that is in your baby\'s umbilical cord to give your baby fluids, nutrients
        or medications.</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_nicu">Welcome to NICU</string>
    <string name="sex_title">Sex:</string>
    <string name="birth_date_title">Birth Date:</string>
    <string name="age_title">Age:</string>
    <string-array name="equipmentArr">

        <item>A</item>
        <item>B</item>
        <item>Cardiopulmonary Monitor</item>
        <item>Central Venous Catheter</item>
        <item>Continuous Positive Airway Pressure</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>Incubator</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>Nasogastric Tube</item>
        <item>O</item>
        <item>Peripheral Intravenous Catheter</item>
        <item>Phototherapy</item>
        <item>Pulse Oximeter</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>Umbilical Catheter</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="journal_title">Entry Name:</string>
    <string name="journal_date">Entry Date:</string>
    <string name="journal_body">Journal notes:</string>
    <string name="journal_submit">Submit</string>
    <string name="journal_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>