<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybutton"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:visibility="visible"
    tools:context="com.neonatal.app.src.PatientProfileActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.neonatal.app.src.CreateJournalActivity">
            <EditText
                android:id="@+id/editText6"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/editText7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/spinner2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:padding="2dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/editText6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="175dp"
                android:entries="@array/Sex_array"
                android:padding="2dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/radioButton3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:onClick="addselected"
                android:text="@string/add_new_patient"
                app:layout_constraintBottom_toTopOf="@+id/spinnerWeeks"
                app:layout_constraintEnd_toStartOf="@+id/radioButton4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:onClick="updateselected"
                android:text="@string/update_selected"
                app:layout_constraintBottom_toTopOf="@+id/spinnerWeeks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.548"
                app:layout_constraintStart_toEndOf="@+id/radioButton3"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />

            <Button
                android:id="@+id/buttonAccept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/mybutton"
                android:onClick="newPatient"
                android:text="Accept"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PreMature" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/mybutton"
                android:text="Clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerWeeks"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:entries="@array/PreMatrureweeks"
                android:textAlignment="center"
                android:padding="4dp"
                app:layout_constraintBottom_toTopOf="@+id/PreMature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

            <CheckBox
                android:id="@+id/PreMature"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="123dp"
                android:layout_marginStart="123dp"
                android:layout_marginTop="30dp"
                android:text="Pre Mature Baby"
                android:onClick="hidePreMatureWeeks"
                app:layout_constraintBottom_toTopOf="@+id/buttonAccept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerWeeks" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
